--- a/Currency-Exchange-Service/src/main/resources/application.yml
+++ b/Currency-Exchange-Service/src/main/resources/application.yml
@@ -15,3 +15,10 @@ spring:
     
 server:
   port: 8000
+  
+
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
